fix: spacing in words

--- a/src/widgets/07-ecosystem-screens/ui/05-disclaimer/disclaimer.module.scss
+++ b/src/widgets/07-ecosystem-screens/ui/05-disclaimer/disclaimer.module.scss
@@ -1,5 +1,5 @@
 .disclaimer {
-    font: 600 14px/1.4 $kFontPublicSans;
+    font: 600 14px/1.8 $kFontPublicSans;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -10,8 +10,8 @@
 .wrapper {
     max-width: 1100px;
     width: 100%;
-    margin: 10px auto;
-    padding: 20px 25px;
+    margin: 15px auto;
+    padding: 20px 35px;
     background-color: #ffffff;
     border-left: 8px solid #f44336;
     border-radius: 6px;
@@ -27,8 +27,10 @@
 .content {
     margin: 0;
     font-size: 15px;
+    line-height: 1.8;
     color: #333;
     text-align: justify;
+    letter-spacing: 0.5px;
 }
 
 .link {
